[package]
name = "my-device"
version = "0.1.3"
description = "Get information about device os, cpu, ram, disks, networks & consuming processes"
repository = "https://github.com/sweps91/my-device"
license = "MIT"
rust-version = "1.96"
keywords = [
    "rust",
    "device",
    "cpu",
    "monitor",
    "monitoring",
    "ram",
    "disk",
    "hardware",
    "network",
    "os",
    "processes",
    "rust-lang",
    "rust-library",
    "cpu-monitoring",
    "disk-usage",
    "monitoring-tool",
    "hardware-monitoring",
]
edition = "2024"

[dependencies]
chrono = "0.4.44"
env_logger = "0.11.11"
log = "0.4.33"
sysinfo = "0.39.3"
